FIX: Many bugs and problems in ZEModelHelper have been fixed. MOD: Loading mechanisms of ZEModel and it's sub components such as ZEModelMesh, ZEModelHelper, etc. have been revised.
svn path=/trunk/; revision=2086

--- a/Source/ZEEngine/ZEModel/CMakeLists.txt
+++ b/Source/ZEEngine/ZEModel/CMakeLists.txt
@@ -40,7 +40,7 @@ ze_add_source(ZEModel.h						Sources Headers ZEMC)
 ze_add_source(ZEMDVertex.cpp				Sources)
 ze_add_source(ZEMDVertex.h					Sources Headers)
 ze_add_source(ZEModelAnimation.cpp			Sources)
-ze_add_source(ZEModelAnimation.h			Sources Headers)
+ze_add_source(ZEModelAnimation.h			Sources Headers ZEMC)
 ze_add_source(ZEModelAnimationTrack.cpp		Sources)
 ze_add_source(ZEModelAnimationTrack.h		Sources Headers ZEMC)
 ze_add_source(ZEModelBone.cpp				Sources)
@@ -53,6 +53,8 @@ ze_add_source(ZEModelMesh.cpp				Sources)
 ze_add_source(ZEModelMesh.h					Sources Headers ZEMC)
 ze_add_source(ZEModelMeshLOD.cpp			Sources)
 ze_add_source(ZEModelMeshLOD.h				Sources Headers ZEMC)
+ze_add_source(ZEModelDraw.cpp				Sources)
+ze_add_source(ZEModelDraw.h					Sources Headers ZEMC)
 ze_add_source(ZEModelHelper.cpp				Sources)
 ze_add_source(ZEModelHelper.h				Sources Headers ZEMC)
 ze_add_source(ZEModelDebugDrawer.cpp		Sources)
