FIX: ZEMetaCompiler ZE_OBJECT is missing error has been changed from error to notice. UPD: ZEMetaCompiler.exe has been updated to new revision. FIX: Many bug fixes and improvements has been made on ZERSResource system. MOD: ZEGraphics resources has been moved to ZERSResource system. FIX: Unsafe multi inheritance function ZEHolder::GetPointerToPointer has been removed. ADD: Single resource setter functions such as SetTexture, SetVertexBuffer and etc. has been added to ZEGRContex. FIX: Unsafe ZEHolder::GetPointerToPointer and reinterpret_cast are replaced with new single resource ZEGRContext functions. ADD: All of ZEGraphics module have been modified to become ZEMeta capable. REM: ZEGRResource has been changed to inherit from ZERSResource. FIX: Missing ZE_DISALLOW_COPY class options has been added to all resource classes.
svn path=/trunk/; revision=2089

--- a/Source/ZEEngine/ZEGraphics/CMakeLists.txt
+++ b/Source/ZEEngine/ZEGraphics/CMakeLists.txt
@@ -38,72 +38,72 @@ cmake_minimum_required(VERSION 2.8)
 ze_add_source(ZEGRGraphicsModule.cpp 		Sources)
 ze_add_source(ZEGRGraphicsModule.h 			Sources Headers ZEMC)
 ze_add_source(ZEGRContext.cpp				Sources)
-ze_add_source(ZEGRContext.h					Sources Headers)
+ze_add_source(ZEGRContext.h					Sources Headers ZEMC)
 ze_add_source(ZEGRRenderState.cpp			Sources)
-ze_add_source(ZEGRRenderState.h				Sources Headers)
+ze_add_source(ZEGRRenderState.h				Sources Headers ZEMC)
 
 ze_add_source(ZEGRDefinitions.cpp			Sources)
-ze_add_source(ZEGRDefinitions.h				Sources Headers)
+ze_add_source(ZEGRDefinitions.h				Sources Headers ZEMC)
 
 ze_add_source(ZEGRState.cpp					Sources)
-ze_add_source(ZEGRState.h					Sources Headers)
+ze_add_source(ZEGRState.h					Sources Headers ZEMC)
 ze_add_source(ZEGRBlendState.cpp			Sources)
-ze_add_source(ZEGRBlendState.h				Sources Headers)
+ze_add_source(ZEGRBlendState.h				Sources Headers ZEMC)
 ze_add_source(ZEGRDepthStencilState.cpp		Sources)
-ze_add_source(ZEGRDepthStencilState.h		Sources Headers)
+ze_add_source(ZEGRDepthStencilState.h		Sources Headers ZEMC)
 ze_add_source(ZEGRRasterizerState.cpp 		Sources)
-ze_add_source(ZEGRRasterizerState.h 		Sources Headers)
+ze_add_source(ZEGRRasterizerState.h 		Sources Headers ZEMC)
 ze_add_source(ZEGRVertexLayout.cpp			Sources)
-ze_add_source(ZEGRVertexLayout.h			Sources Headers)
+ze_add_source(ZEGRVertexLayout.h			Sources Headers ZEMC)
 
 ze_add_source(ZEGRResource.cpp				Sources)
-ze_add_source(ZEGRResource.h				Sources Headers)
+ze_add_source(ZEGRResource.h				Sources Headers ZEMC)
 
 ze_add_source(ZEGRSampler.cpp 				Sources)
-ze_add_source(ZEGRSampler.h 				Sources Headers)
+ze_add_source(ZEGRSampler.h 				Sources Headers ZEMC)
 
 ze_add_source(ZEGRIndexBuffer.cpp 			Sources)
-ze_add_source(ZEGRIndexBuffer.h 			Sources Headers)
+ze_add_source(ZEGRIndexBuffer.h 			Sources Headers ZEMC)
 ze_add_source(ZEGRVertexBuffer.cpp 			Sources)
-ze_add_source(ZEGRVertexBuffer.h 			Sources Headers)
+ze_add_source(ZEGRVertexBuffer.h 			Sources Headers ZEMC)
 ze_add_source(ZEGRConstantBuffer.cpp		Sources)
-ze_add_source(ZEGRConstantBuffer.h			Sources Headers)
+ze_add_source(ZEGRConstantBuffer.h			Sources Headers ZEMC)
 ze_add_source(ZEGRStructuredBuffer.cpp		Sources)
-ze_add_source(ZEGRStructuredBuffer.h		Sources Headers)
+ze_add_source(ZEGRStructuredBuffer.h		Sources Headers ZEMC)
 
 ze_add_Source(ZEGRFormat.cpp				Sources)
-ze_add_Source(ZEGRFormat.h					Sources Headers)
+ze_add_Source(ZEGRFormat.h					Sources Headers ZEMC)
 ze_add_source(ZEGRTexture.cpp 				Sources)
-ze_add_source(ZEGRTexture.h 				Sources Headers)
+ze_add_source(ZEGRTexture.h 				Sources Headers ZEMC)
 ze_add_source(ZEGRTexture2D.cpp				Sources)
-ze_add_source(ZEGRTexture2D.h 				Sources Headers)
+ze_add_source(ZEGRTexture2D.h 				Sources Headers ZEMC)
 ze_add_source(ZEGRTexture3D.cpp 			Sources)
-ze_add_source(ZEGRTexture3D.h 				Sources Headers)
+ze_add_source(ZEGRTexture3D.h 				Sources Headers ZEMC)
 ze_add_source(ZEGRTextureCube.cpp 			Sources)
-ze_add_source(ZEGRTextureCube.h 			Sources Headers)
+ze_add_source(ZEGRTextureCube.h 			Sources Headers ZEMC)
 
 ze_add_source(ZEGRDepthStencilBuffer.cpp	Sources)
-ze_add_source(ZEGRDepthStencilBuffer.h		Sources Headers)
+ze_add_source(ZEGRDepthStencilBuffer.h		Sources Headers ZEMC)
 ze_add_source(ZEGRRenderTarget.cpp 			Sources)
-ze_add_source(ZEGRRenderTarget.h 			Sources Headers)
+ze_add_source(ZEGRRenderTarget.h 			Sources Headers ZEMC)
 
 ze_add_source(ZEGRScissorRect.cpp			Sources)
-ze_add_source(ZEGRScissorRect.h				Sources Headers)
+ze_add_source(ZEGRScissorRect.h				Sources Headers ZEMC)
 ze_add_source(ZEGRViewport.cpp				Sources)
 ze_add_source(ZEGRViewport.h				Sources Headers ZEMC)
 
 ze_add_source(ZEGRShader.cpp 				Sources)
-ze_add_source(ZEGRShader.h 					Sources Headers)
+ze_add_source(ZEGRShader.h 					Sources Headers ZEMC)
 ze_add_source(ZEGRShaderMeta.cpp			Sources)
-ze_add_source(ZEGRShaderMeta.h				Sources Headers)
+ze_add_source(ZEGRShaderMeta.h				Sources Headers ZEMC)
 ze_add_source(ZEGRShaderCompiler.cpp		Sources)
-ze_add_source(ZEGRShaderCompiler.h			Sources Headers)
+ze_add_source(ZEGRShaderCompiler.h			Sources Headers ZEMC)
 ze_add_source(ZEGRShaderCompileOptions.cpp	Sources)
-ze_add_source(ZEGRShaderCompileOptions.h	Sources Headers)
+ze_add_source(ZEGRShaderCompileOptions.h	Sources Headers ZEMC)
 
-ze_add_source(ZEGRAdapter.h					Sources Headers)
+ze_add_source(ZEGRAdapter.h					Sources Headers ZEMC)
 ze_add_source(ZEGRAdapter.cpp				Sources)
-ze_add_source(ZEGROutput.h					Sources Headers)
+ze_add_source(ZEGROutput.h					Sources Headers ZEMC)
 ze_add_source(ZEGROutput.cpp				Sources)
 
 ze_add_source(ZEGRWindow.h					Sources Headers ZEMC)
