--- a/Source/ZEEngine/ZETexture/CMakeLists.txt
+++ b/Source/ZEEngine/ZETexture/CMakeLists.txt
@@ -40,7 +40,7 @@ ze_add_source(ZEBitmap.h								Sources Headers)
 ze_add_source(ZETexture2DResource.cpp					Sources)
 ze_add_source(ZETexture2DResource.h						Sources Headers ZEMC)
 ze_add_source(ZETexture3DResource.cpp					Sources)
-ze_add_source(ZETexture3DResource.h						Sources Headers)
+ze_add_source(ZETexture3DResource.h						Sources Headers ZEMC)
 ze_add_source(ZETextureResource.cpp						Sources)
 ze_add_source(ZETextureResource.h						Sources Headers ZEMC)
 ze_add_source(ZETextureCacheDataIdentifier.cpp			Sources)
