--- a/Source/ZEEngine/ZEResource/CMakeLists.txt
+++ b/Source/ZEEngine/ZEResource/CMakeLists.txt
@@ -37,6 +37,8 @@ cmake_minimum_required (VERSION 2.8)
 
 ze_add_source(ZERSResource.cpp					Sources)
 ze_add_source(ZERSResource.h					Sources Headers ZEMC)
+ze_add_source(ZERSResourceGroup.cpp				Sources)
+ze_add_source(ZERSResourceGroup.h				Sources Headers ZEMC)
 ze_add_source(ZERSResourceManager.cpp			Sources)
 ze_add_source(ZERSResourceManager.h				Sources Headers ZEMC)
 ze_add_source(ZERSDefinitions.cpp				Sources)
