--- a/Source/ZEEngine/ZERenderer/CMakeLists.txt
+++ b/Source/ZEEngine/ZERenderer/CMakeLists.txt
@@ -72,8 +72,8 @@ ze_add_source(ZERNMaterial.cpp 						Sources)
 ze_add_source(ZERNMaterial.h 						Sources Headers ZEMC)
 ze_add_source(ZERNSimpleMaterial.cpp 				Sources)
 ze_add_source(ZERNSimpleMaterial.h 					Sources Headers ZEMC)
-ze_add_source(ZERNFixedMaterial.cpp 				Sources)
-ze_add_source(ZERNFixedMaterial.h 					Sources Headers ZEMC)
+ze_add_source(ZERNStandardMaterial.cpp 				Sources)
+ze_add_source(ZERNStandardMaterial.h 				Sources Headers ZEMC)
 ze_add_source(ZERNParticleMaterial.cpp 				Sources)
 ze_add_source(ZERNParticleMaterial.h 				Sources Headers ZEMC)
 
