ADD: Reload and Reinitialize facilities have been added to ZEEntity. ADD: New State Screen entity has been added. Still in development. CHG: ZEMDResource components such as ZEMDResourceMesh, ZEMDResourceHelper have been changed to become non-resource. FIX: Many RAII and destruction problems in ZEModel and ZEMDResource and it's components have been fixed. FIX: ZEModel and its components Load and Unload problems have been fixed. ADD: ZERNPreRenderType, which defines what it renderer is doing (Generating Shadow Map ? Rendering Color Output) enumuration has been inroduced and added to ZERNPreRenderParameters. FIX: Context locking problem in ZED11VertexBuffer has been fixed.
svn path=/trunk/; revision=2106

--- a/Source/ZEEngine/ZEGame/CMakeLists.txt
+++ b/Source/ZEEngine/ZEGame/CMakeLists.txt
@@ -53,7 +53,8 @@ ze_add_source(ZESectorManager.cpp		Sources)
 ze_add_source(ZESectorManager.h			Sources Headers ZEMC)
 ze_add_source(ZESectorSelector.cpp		Sources)
 ze_add_source(ZESectorSelector.h		Sources Headers ZEMC)
-
+ze_add_source(ZEStateScreen.cpp			Sources)
+ze_add_source(ZEStateScreen.h			Sources Headers ZEMC)
 
 ze_add_library(TARGET ZEGame 
 	ZEMC ${ZEMC}
