FIX: Uninitialized variables in ZEEntity have been fixed. FIX: No Tick problem in ZEDEditor has been fixed. ADD: Volume ray cast interfaces have been added to ZEEntity. (Still under developmnet) FIX: ZEUIManager UIRenderer not initialized problem has been fixed. ADD: Async loading support has been implemented in ZEDEntityWrapper. FIX: ZEModel::SetModelFile Loading problem has been fixed.
svn path=/trunk/; revision=2107

--- a/Source/ZEEngine/ZEGame/CMakeLists.txt
+++ b/Source/ZEEngine/ZEGame/CMakeLists.txt
@@ -43,6 +43,8 @@ ze_add_source(ZEPlayer.cpp				Sources)
 ze_add_source(ZEPlayer.h				Sources Headers ZEMC)
 ze_add_source(ZERayCast.cpp				Sources)
 ze_add_source(ZERayCast.h				Sources Headers)
+ze_add_source(ZEVolumeCast.cpp			Sources)
+ze_add_source(ZEVolumeCast.h			Sources Headers)
 ze_add_source(ZEScene.cpp				Sources)
 ze_add_source(ZEScene.h					Sources Headers ZEMC)
 ze_add_source(ZEGeographicEntity.cpp	Sources)
