MOD: ZEOctree has been massively revised and improved. ADD: Expansion support has been added to ZEOctree. ADD: ZEOctree iterator has been implemented. ADD: Auto shrink support has been added to ZEOctree.
svn path=/trunk/; revision=2110

--- a/Source/ZEFoundation/ZESpatial/CMakeLists.txt
+++ b/Source/ZEFoundation/ZESpatial/CMakeLists.txt
@@ -39,6 +39,8 @@ ze_add_source(ZEQuadTree.cpp			Sources)
 ze_add_source(ZEQuadTree.h				Sources Headers)
 ze_add_source(ZEOctree.cpp				Sources)
 ze_add_source(ZEOctree.h				Sources Headers)
+ze_add_source(ZEOctreeIterator.cpp		Sources)
+ze_add_source(ZEOctreeIterator.h		Sources Headers)
 
 ze_add_library(TARGET ZESpatial 
 	SOURCES ${Sources} 
