--- a/Source/ZEEngine/ZEGame/CMakeLists.txt
+++ b/Source/ZEEngine/ZEGame/CMakeLists.txt
@@ -39,6 +39,8 @@ ze_add_source(ZECanvasBrush.cpp			Sources)
 ze_add_source(ZECanvasBrush.h			Sources Headers ZEMC)
 ze_add_source(ZEEntity.cpp				Sources)
 ze_add_source(ZEEntity.h				Sources Headers ZEMC)
+ze_add_source(ZEEntityMacros.cpp		Sources)
+ze_add_source(ZEEntityMacros.h			Sources Headers)
 ze_add_source(ZEPlayer.cpp				Sources)
 ze_add_source(ZEPlayer.h				Sources Headers ZEMC)
 ze_add_source(ZERayCast.cpp				Sources)
