MOD: ZEViewSphere, ZEViewHemiSphere and ZEViewCuboid have been modified to derive from its counterparts such as ZEBSphere and etc. ADD: ZEViewRay, ZEViewLine, ZEViewLineSegment and ZEViewAABBox have been added for extending volume casting functionality and unifying casting functionality. CHG: ZEViewXXX classes have moved to its counter part header and source files. CHG: ZEViewCuboid has been renamed to ZEViewOBBox. CHG: ZEViewVolume::CullTest functions have been renamed to IntersectionTest. CHG: ZEViewVolume::CullTest return value have been made consistent with IntersectionTest functions. CullTest returns true if object is not intersected with view volume. IntersectionTest returns true if object intersect with view volume. CHG: ZEOctreeIterator and ZEOctree::Traverse function has been modified to use ZEViewVolume(s) instead of ZEAABox for more extended functionality. FIX: Bug that makes ZERSResourceManager::GetResourceInternal function returning NULL has been fixed. FIX: ZEInterior load chaing bug has been fixed. FIX: ZEEntity::DestroyInternal chain bug has been fixed.
svn path=/trunk/; revision=2114

--- a/Source/ZEFoundation/ZEMath/CMakeLists.txt
+++ b/Source/ZEFoundation/ZEMath/CMakeLists.txt
@@ -35,71 +35,66 @@
 
 cmake_minimum_required (VERSION 2.8)
 
-ze_add_source(ZEAABBox.cpp				Sources)
-ze_add_source(ZEAABBox.h				Sources Headers)
-ze_add_source(ZEAngle.cpp				Sources)
-ze_add_source(ZEAngle.h					Sources Headers)
-ze_add_source(ZEAngleTests.cpp			Tests)
-ze_add_source(ZEAABBoxTests.cpp			Tests)
-ze_add_source(ZEBSphere.cpp				Sources)
-ze_add_source(ZEBSphere.h				Sources Headers)
-ze_add_source(ZEBSphereTests.cpp		Tests)
-ze_add_source(ZELine.cpp				Sources)
-ze_add_source(ZELine.h					Sources Headers)
-ze_add_source(ZELineTests.cpp			Tests)
-ze_add_source(ZELineSegment.cpp			Sources)
-ze_add_source(ZELineSegment.h			Sources Headers)
-ze_add_source(ZELineSegmentTests.cpp	Tests)
-ze_add_source(ZEMath.h					Sources Headers)
-ze_add_Source(ZEMath.cpp				Sources)
-ze_add_source(ZEMatrix.cpp				Sources)
-ze_add_source(ZEMatrix3x3Tests.cpp		Tests)
-ze_add_source(ZEMatrix4x4Tests.cpp		Tests)
-ze_add_source(ZEMatrix.h				Sources Headers)
-ze_add_source(ZEMatrixdGeneric.cpp		Sources)
-ze_add_source(ZEMatrixd.cpp				Sources)
-ze_add_source(ZEMatrixd.h				Sources Headers)
-ze_add_source(ZEOBBox.cpp				Sources)
-ze_add_source(ZEOBBox.h					Sources Headers)
-ze_add_source(ZEOBBoxTests.cpp			Tests)
-ze_add_source(ZEPlane.cpp				Sources)
-ze_add_source(ZEPlane.h					Sources Headers)
-ze_add_source(ZEPlaneTests.cpp			Tests)
-ze_add_source(ZEQuaternion.cpp			Sources)
-ze_add_source(ZEQuaternion.h			Sources Headers)
-ze_add_source(ZEQuaternionTests.cpp		Tests)
-ze_add_source(ZERay.cpp					Sources)
-ze_add_source(ZERay.h					Sources Headers)
-ze_add_source(ZERayTests.cpp			Tests)
-ze_add_source(ZERectangle.cpp			Sources)
-ze_add_source(ZERectangle.h				Sources Headers)
-ze_add_source(ZERectangleTests.cpp		Tests)
-ze_add_source(ZERectangle3D.cpp			Sources)
-ze_add_source(ZERectangle3D.h			Sources Headers)
-ze_add_source(ZERectangle3DTests.cpp	Tests)
-ze_add_source(ZETriangle.cpp			Sources)
-ze_add_source(ZETriangle.h				Sources Headers)
-ze_add_source(ZETriangleTests.cpp		Tests)
-ze_add_source(ZEVectordGeneric.cpp		Sources)
-ze_add_source(ZEVectord.cpp				Sources)
-ze_add_source(ZEVectord.h				Sources Headers)
-ze_add_source(ZEVector.cpp				Sources)
-ze_add_source(ZEVector.h				Sources Headers)
-ze_add_source(ZEVector2Tests.cpp		Tests)
-ze_add_source(ZEVector3Tests.cpp		Tests)
-ze_add_source(ZEVector4Tests.cpp		Tests)
-ze_add_source(ZEPolygon.h				Sources Headers)
-ze_add_source(ZEPolygon.cpp				Sources)
-ze_add_source(ZEViewVolume.h			Sources Headers)
-ze_add_source(ZEViewVolume.cpp			Sources)
-ze_add_source(ZEViewFrustum.h			Sources Headers)
-ze_add_source(ZEViewFrustum.cpp			Sources)
-ze_add_source(ZEViewSphere.h			Sources Headers)
-ze_add_source(ZEViewSphere.cpp			Sources)
-ze_add_source(ZEViewHemiSphere.h		Sources Headers)
-ze_add_source(ZEViewHemiSphere.cpp		Sources)
-ze_add_source(ZEViewCuboid.h			Sources Headers)
-ze_add_source(ZEViewCuboid.cpp			Sources)
+ze_add_source(ZEAABBox.cpp						Sources)
+ze_add_source(ZEAABBox.h						Sources Headers)
+ze_add_source(ZEAngle.cpp						Sources)
+ze_add_source(ZEAngle.h							Sources Headers)
+ze_add_source(ZEAngleTests.cpp					Tests)
+ze_add_source(ZEAABBoxTests.cpp					Tests)
+ze_add_source(ZEBSphere.cpp						Sources)
+ze_add_source(ZEBSphere.h						Sources Headers)
+ze_add_source(ZEBSphereTests.cpp				Tests)
+ze_add_source(ZELine.cpp						Sources)
+ze_add_source(ZELine.h							Sources Headers)
+ze_add_source(ZELineTests.cpp					Tests)
+ze_add_source(ZELineSegment.cpp					Sources)
+ze_add_source(ZELineSegment.h					Sources Headers)
+ze_add_source(ZELineSegmentTests.cpp			Tests)
+ze_add_source(ZEMath.h							Sources Headers)
+ze_add_Source(ZEMath.cpp						Sources)
+ze_add_source(ZEMatrix.cpp						Sources)
+ze_add_source(ZEMatrix3x3Tests.cpp				Tests)
+ze_add_source(ZEMatrix4x4Tests.cpp				Tests)
+ze_add_source(ZEMatrix.h						Sources Headers)
+ze_add_source(ZEMatrixdGeneric.cpp				Sources)
+ze_add_source(ZEMatrixd.cpp						Sources)
+ze_add_source(ZEMatrixd.h						Sources Headers)
+ze_add_source(ZEOBBox.cpp						Sources)
+ze_add_source(ZEOBBox.h							Sources Headers)
+ze_add_source(ZEOBBoxTests.cpp					Tests)
+ze_add_source(ZEPlane.cpp						Sources)
+ze_add_source(ZEPlane.h							Sources Headers)
+ze_add_source(ZEPlaneTests.cpp					Tests)
+ze_add_source(ZEQuaternion.cpp					Sources)
+ze_add_source(ZEQuaternion.h					Sources Headers)
+ze_add_source(ZEQuaternionTests.cpp				Tests)
+ze_add_source(ZERay.cpp							Sources)
+ze_add_source(ZERay.h							Sources Headers)
+ze_add_source(ZERayTests.cpp					Tests)
+ze_add_source(ZERectangle.cpp					Sources)
+ze_add_source(ZERectangle.h						Sources Headers)
+ze_add_source(ZERectangleTests.cpp				Tests)
+ze_add_source(ZERectangle3D.cpp					Sources)
+ze_add_source(ZERectangle3D.h					Sources Headers)
+ze_add_source(ZERectangle3DTests.cpp			Tests)
+ze_add_source(ZETriangle.cpp					Sources)
+ze_add_source(ZETriangle.h						Sources Headers)
+ze_add_source(ZETriangleTests.cpp				Tests)
+ze_add_source(ZEVectordGeneric.cpp				Sources)
+ze_add_source(ZEVectord.cpp						Sources)
+ze_add_source(ZEVectord.h						Sources Headers)
+ze_add_source(ZEVector.cpp						Sources)
+ze_add_source(ZEVector.h						Sources Headers)
+ze_add_source(ZEVector2Tests.cpp				Tests)
+ze_add_source(ZEVector3Tests.cpp				Tests)
+ze_add_source(ZEVector4Tests.cpp				Tests)
+ze_add_source(ZEPolygon.h						Sources Headers)
+ze_add_source(ZEPolygon.cpp						Sources)
+ze_add_source(ZEFrustum.h						Sources Headers)
+ze_add_source(ZEFrustum.cpp						Sources)
+ze_add_source(ZEViewVolume.h					Sources Headers)
+ze_add_source(ZEViewVolume.cpp					Sources)
+
 
 if (ZEBUILD_PLATFORM_ARCHITECTURE_SSE4)
 	ze_add_source(ZEMatrixSSE4.cpp			Sources)
