ADD: Recursive lock detection has been added to ZELock. ADD: ZEThread::GetCurrentThreadId(), which is used for getting current thread id, function has been added. ADD: New more precise internal Loading Score system has been added to replace old Loading Progress based one. LoadingProgress interfaces still available for easy access. FIX: Many bounding box calculation related deadlocks have been fixed. ADD: Octree based static entity culling mechanism has been implemented in ZEScene. (Currently disabled) FIX: Many race condition caused memory corruption and problems in editor have been fixed.
svn path=/trunk/; revision=2118

--- a/Source/ZEFoundation/CMakeLists.txt
+++ b/Source/ZEFoundation/CMakeLists.txt
@@ -61,6 +61,7 @@ add_subdirectory(ZEPointer)
 add_subdirectory(ZEITIntegrity)
 
 ze_add_source(ZEAutoExp.txt						Sources Headers)
+ze_add_source(ZE.natvis							Sources Headers)
 ze_add_source(ZEData.h 							Sources Headers)
 ze_add_source(ZEData.cpp 						Sources)
 ze_add_source(ZEDLL.h 							Sources Headers)
