ADD: ZEModelConverter has been added for converting v1.0 ZEModel files to v2.0. CHG: ZEMDResource and its sub classes have been modified to read model resources from v2.0 ZEModel file format. CHG: Modifications made in ZETrainIG project regarding trackside objects. FIX: Minor fix has been made ZEDEditorCore regarding ApplicationInstances. FIX: Fixes have been made in ZE3dsMaxExporter plugin for mesh bounding box miscalculations and invalid material file path generation problems.
svn path=/trunk/; revision=2120

--- a/Source/ZETools/ZE3dsMaxExporter/CMakeLists.txt
+++ b/Source/ZETools/ZE3dsMaxExporter/CMakeLists.txt
@@ -48,6 +48,8 @@ ze_add_source(ZE3dsMaxPlugin.cpp							Sources)
 ze_add_source(ZE3dsMaxPlugin.def							Sources)
 ze_add_source(ZE3dsMaxUtils.h								Sources)
 ze_add_source(ZE3dsMaxUtils.cpp								Sources)
+ze_add_source(ZE3dsMaxDefinitions.h							Sources)
+ze_add_source(ZE3dsMaxDefinitions.cpp						Sources)
 
 ze_add_source(ZE3dsMaxInteriorExporter.h					Sources)
 ze_add_source(ZE3dsMaxInteriorExporter.cpp					Sources)
