FIX: Many problems and bugs in ZEGRIndexBuffer have been fixed. ADD: Usage and static resource support has been added to ZEGRIndexBuffer. REM: Old and unused mechanisms such as AffectingBoneIds have been removed from ZEModel. ADD: Index buffer support has been added to ZEModel. FIX: Skinned mesh bugs and problems have been fixed in ZEModel. ADD: Index generation support has been added to ZEModelConverter. ADD: More diagnostic and logging points have been introduced to ZEModelConverter. FIX: ZEAABBox natvis bugs have been fixed. ADD: DrawIndexed function has been added to ZEGRContext. ADD: TotalNodeCount and TotalItemCount properties have been added to ZEOctree. ADD: Statistical counters, for culling statistics, have been added to ZEScene::PreRender functions. ADD: Many new vertex element types have been introduced to ZEGRVertexElementType. CHG: ZEGRVertexElementType items have been refactored in order to match the new requirements of new types. FIX: Memory corruption caused by race condition in ZERSResource externel resource mechanism has been fixed.
svn path=/trunk/; revision=2124

--- a/Source/ZEEngine/ZEGraphics/CMakeLists.txt
+++ b/Source/ZEEngine/ZEGraphics/CMakeLists.txt
@@ -55,6 +55,8 @@ ze_add_source(ZEGRRasterizerState.cpp 		Sources)
 ze_add_source(ZEGRRasterizerState.h 		Sources Headers ZEMC)
 ze_add_source(ZEGRVertexLayout.cpp			Sources)
 ze_add_source(ZEGRVertexLayout.h			Sources Headers ZEMC)
+ze_add_source(ZEGRVertexElementType.cpp		Sources)
+ze_add_source(ZEGRVertexElementType.h		Sources Headers ZEMC)
 
 ze_add_source(ZEGRResource.cpp				Sources)
 ze_add_source(ZEGRResource.h				Sources Headers ZEMC)
