MOD: Further simplifications and rearrangements have been made on ZEVCModelConverterV2. ADD: Vertex pre-cache and post-cache optimizer have been added to ZEVCModelConverterV2. ADD: ZEVectorX::Sum, ZEVectorX::Product and ZEVectorX::Abs functions have been added. FIX: Inverted binormal generation problem have been fixed. FIX: zeError no break on error deadlock problem because of wrongly written code has been fixed.
svn path=/trunk/; revision=2126

--- a/Source/ZETools/ZEModelConverter/CMakeLists.txt
+++ b/Source/ZETools/ZEModelConverter/CMakeLists.txt
@@ -35,13 +35,13 @@
 
 cmake_minimum_required (VERSION 2.8)
 
+ze_add_source(ZECVMain.cpp					Sources)
 ze_add_source(ZECVConverter.cpp				Sources)
 ze_add_source(ZECVConverter.h				Sources Headers)
 ze_add_source(ZECVModelConverterV2.cpp		Sources)
 ze_add_source(ZECVModelConverterV2.h		Sources Headers)
-ze_add_source(ZECVMain.cpp					Sources)
 
 ze_add_executable(TARGET ZEModelConverter
 	CONSOLE
 	SOURCES ${Sources}
-	LIBS ZEFoundation ZEModel)
+	LIBS ZEFoundation ZEModel libTootle)
