ADD: Component access swizzle functions have been added to ZEVector. ADD: ZEVectorXX::IsInfinite and ZEVectorXX::IsValidNotInf functions have been added to ZEVector classes. ADD: ZEMatrixXxX::CreateUVN function have been added. FIX: Memory corruption crash in ZEMLReader::ReadData has been fixed. ADD: New utility functions have been added to ZETriangle. ADD: Many bug fixes and coding improvements have been made on ZECVModelConverterV2. ADD: ZEArray::RemoveRange function have been added. ADD: New model animation data format have been implemented ZEMDAnimationData and ZEMDAnimationKey classes. (WORK IN PROGRESS, PARTIAL COMMIT)
svn path=/trunk/; revision=2129

--- a/Source/ZEEngine/ZEModel/CMakeLists.txt
+++ b/Source/ZEEngine/ZEModel/CMakeLists.txt
@@ -39,6 +39,10 @@ ze_add_source(ZEModel.cpp					Sources)
 ze_add_source(ZEModel.h						Sources Headers ZEMC)
 ze_add_source(ZEMDVertex.cpp				Sources)
 ze_add_source(ZEMDVertex.h					Sources Headers)
+ze_add_source(ZEMDAnimationKey.cpp			Sources)
+ze_add_source(ZEMDAnimationKey.h			Sources Headers)
+ze_add_source(ZEMDAnimationData.cpp			Sources)
+ze_add_source(ZEMDAnimationData.h			Sources Headers)
 ze_add_source(ZEModelAnimation.cpp			Sources)
 ze_add_source(ZEModelAnimation.h			Sources Headers ZEMC)
 ze_add_source(ZEModelAnimationTrack.cpp		Sources)
