--- a/Source/ZEFoundation/ZEMath/CMakeLists.txt
+++ b/Source/ZEFoundation/ZEMath/CMakeLists.txt
@@ -80,11 +80,13 @@ ze_add_source(ZERectangle3DTests.cpp			Tests)
 ze_add_source(ZETriangle.cpp					Sources)
 ze_add_source(ZETriangle.h						Sources Headers)
 ze_add_source(ZETriangleTests.cpp				Tests)
-ze_add_source(ZEVectordGeneric.cpp				Sources)
-ze_add_source(ZEVectord.cpp						Sources)
-ze_add_source(ZEVectord.h						Sources Headers)
 ze_add_source(ZEVector.cpp						Sources)
 ze_add_source(ZEVector.h						Sources Headers)
+ze_add_source(ZEVectord.cpp						Sources)
+ze_add_source(ZEVectord.h						Sources Headers)
+ze_add_source(ZEVectorSwizzle.cpp				Sources)
+ze_add_source(ZEVectorSwizzle.h					Sources Headers)
+ze_add_source(ZEVectordGeneric.cpp				Sources)
 ze_add_source(ZEVector2Tests.cpp				Tests)
 ze_add_source(ZEVector3Tests.cpp				Tests)
 ze_add_source(ZEVector4Tests.cpp				Tests)
