ADD: ZETimeStamp::ToString method has been added to ZETimeStamp. ADD: Material converter has been added to ZECVConverter. ADD: Scene converter has been added to ZECVConverter. REM: ZEMaterialConverter has been removed in favor of ZECVConverter. REM ZESceneConverter has been removed in favor of ZECVConverter. MOD: Many improvements have been made on ZECVConverter.
svn path=/trunk/; revision=2131

--- a/Source/ZETools/ZECVConverter/CMakeLists.txt
+++ b/Source/ZETools/ZECVConverter/CMakeLists.txt
@@ -49,6 +49,16 @@ ze_add_source(ZECVModelAsset.h				Sources Headers)
 ze_add_source(ZECVModelConverterV2.cpp		Sources)
 ze_add_source(ZECVModelConverterV2.h		Sources Headers)
 
+ze_add_source(ZECVMaterialAsset.cpp			Sources)
+ze_add_source(ZECVMaterialAsset.h			Sources Headers)
+ze_add_source(ZECVMaterialConverterV2.cpp	Sources)
+ze_add_source(ZECVMaterialConverterV2.h		Sources Headers)
+
+ze_add_source(ZECVSceneAsset.cpp			Sources)
+ze_add_source(ZECVSceneAsset.h				Sources Headers)
+ze_add_source(ZECVSceneConverterV1.cpp		Sources)
+ze_add_source(ZECVSceneConverterV1.h		Sources Headers)
+
 ze_add_source(ZECVTestAsset.cpp				Sources)
 ze_add_source(ZECVTestAsset.h				Sources Headers)
 ze_add_source(ZECVTestConverter.cpp			Sources)
