--- a/Source/ZETools/ZECVConverter/CMakeLists.txt
+++ b/Source/ZETools/ZECVConverter/CMakeLists.txt
@@ -66,6 +66,12 @@ ze_add_source(ZECVTestConverter.h			Sources Headers)
 
 ze_add_source(ZECVMain.cpp					Sources)
 
+find_package(OpenMP REQUIRED)
+if (OPENMP_FOUND)
+    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
+    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+endif()
+
 ze_add_executable(TARGET ZECVConverter
 	CONSOLE
 	SOURCES ${Sources}
