--- a/Source/ZEFoundation/CMakeLists.txt
+++ b/Source/ZEFoundation/CMakeLists.txt
@@ -86,6 +86,8 @@ ze_add_source(ZEError.h 						Sources Headers)
 ze_add_source(ZEError.cpp 						Sources)
 ze_add_source(ZELog.h							Sources Headers)
 ze_add_source(ZELog.cpp							Sources)
+ze_add_source(ZELogSession.h					Sources Headers)
+ze_add_source(ZELogSession.cpp					Sources)
 ze_add_source(ZEPacking.h 						Sources Headers)
 ze_add_source(ZEPacking.cpp 					Sources)
 ze_add_source(ZERandom.h 						Sources Headers)
