--- a/Source/ZETools/ZEDSHShaderEditor/CMakeLists.txt
+++ b/Source/ZETools/ZEDSHShaderEditor/CMakeLists.txt
@@ -67,7 +67,7 @@ qt5_use_modules(ZEDSHShaderEditor Widgets)
 ze_add_source(ZEDSHShaderEditor.def			SourcesDLL)
 ze_add_library(TARGET ZEDSHShaderEditorDLL
 	SOURCES ${SourcesDLL} ${Sources} ${QtMocFiles} ${QtUIFiles}
-	LIBS ZEFoundation ZEGraphics ZEDirect3D11
+	LIBS ZEFoundation ZEEngine ZEDirect3D11
 	DLL)
 
 qt5_use_modules(ZEDSHShaderEditorDLL Widgets)
