CHG: CMake default options have been changed to enable SSE4 by default. CHG: SSE3 and SSE4 codes have been merged into single file for maintainability purposes. CHG: ZEOctree auto shrink has been disabled for performance purposes. FIX: Weird Intel C Compiler bug in zeLog (__MODULE__ variable makes macro undefined) has been fixed. FIX: Many more weird Intel C Compiler problems have been fixed.
svn path=/trunk/; revision=2138

--- a/Source/ZEFoundation/ZEMath/CMakeLists.txt
+++ b/Source/ZEFoundation/ZEMath/CMakeLists.txt
@@ -99,17 +99,17 @@ ze_add_source(ZEViewVolume.cpp					Sources)
 
 
 if (ZEBUILD_PLATFORM_ARCHITECTURE_SSE4)
-	ze_add_source(ZEMatrixSSE4.cpp			Sources)
-	ze_add_source(ZEVectorSSE4.cpp			Sources)
     add_definitions(-D__SSE4__)
     add_definitions(-D__SSE__)
     add_definitions(-D__MMX__)
+	ze_add_source(ZEMatrixSSE.cpp			Sources)
+	ze_add_source(ZEVectorSSE.cpp			Sources)
 elseif (ZEBUILD_PLATFORM_ARCHITECTURE_SSE3)
-	ze_add_source(ZEMatrixSSE3.cpp			Sources)
-	ze_add_source(ZEVectorSSE3.cpp			Sources)
     add_definitions(-D__SSE3__)
     add_definitions(-D__SSE__)
     add_definitions(-D__MMX__)
+	ze_add_source(ZEMatrixSSE.cpp			Sources)
+	ze_add_source(ZEVectorSSE.cpp			Sources)
 else()
 	ze_add_source(ZEMatrixGeneric.cpp		Sources)
 	ze_add_source(ZEVectorGeneric.cpp		Sources)
