ADD: ZEGRWindow::ManageInputAcquisition property, which control wheather window's focus control input acquisition, has been added. FIX: ZEList2::MergeBegin/End "item is already added to another list" bug has been fixed. ADD: ZERNInstanceTag class, which is used for finding instances of ZERNCommand, has been added. ADD: Instancing mechanisms have been added to ZERNRenderer and ZERNCommand. ADD: Rendering level instancing support have been added to ZEModel. (Only ZERNRenderer level ZEGRGraphics implementation is still missing) FIX: Missing input acquisition code have been implmented in ZEWindowsInput. ADD: ZERNCommand::StageQueueLinks has been removed and ZERNCommand linking requirements has been combined into signle mechanism ZERNCommand::GetFreeLink. FIX: Potential deadlocks between ZERSResourceManager::ManagerLock and ZERSResource::Resource have been fixed.
svn path=/trunk/; revision=2143

--- a/Source/ZEEngine/ZERenderer/CMakeLists.txt
+++ b/Source/ZEEngine/ZERenderer/CMakeLists.txt
@@ -44,6 +44,8 @@ ze_add_source(ZERNRenderer.cpp 						Sources)
 ze_add_source(ZERNRenderer.h 						Sources Headers ZEMC)
 ze_add_source(ZERNCommand.cpp 						Sources)
 ze_add_source(ZERNCommand.h 						Sources Headers ZEMC)
+ze_add_source(ZERNInstanceTag.cpp 					Sources)
+ze_add_source(ZERNInstanceTag.h 					Sources Headers ZEMC)
 ze_add_source(ZERNView.cpp							Sources)
 ze_add_source(ZERNView.h							Sources Headers ZEMC)
 ze_add_source(ZERNRenderParameters.cpp				Sources)
