ADD: Nested lock support has been added to ZELog. ADD: ZELock has been further improved and many new zeDebugChecks, such as memory alignment check, have been added. ADD: New Read/Write lock ZELockRW has been added. MOD: ZEAllocator has been refactored match with the recent Zinek Coding standards. MOD: ZEArray has been refactored match with the recent Zinek Coding standards. REM: Unnecessary and not used functions have been removed from ZEArray. FIX: ZEDSHShaderEdtior, ZELCLicenseTool, ZEMLEdtor and ZEITIntegrity tool applications has been modified to use Qt5::WinMain.
svn path=/trunk/; revision=2147

--- a/Source/ZEFoundation/ZEThread/CMakeLists.txt
+++ b/Source/ZEFoundation/ZEThread/CMakeLists.txt
@@ -38,6 +38,8 @@ cmake_minimum_required (VERSION 2.8)
 ze_add_source(ZELock.cpp         		Sources)
 ze_add_source(ZELock.h          	 	Sources Headers)
 ze_add_source(ZELockTests.cpp			Tests)
+ze_add_source(ZELockRW.cpp         		Sources)
+ze_add_source(ZELockRW.h          	 	Sources Headers)
 ze_add_source(ZEMutex.cpp   			Sources)
 ze_add_source(ZEMutex_Unix.cpp   		Sources PLATFORMS Unix)
 ze_add_source(ZEMutex_Windows.cpp  		Sources PLATFORMS Windows)
